[gd_scene load_steps=8 format=3 uid="uid://c56woryvo7dni"]

[ext_resource type="Script" uid="uid://bwr5ohusrfwcl" path="res://Scripts/Objects/hud.gd" id="1_k5de2"]
[ext_resource type="AudioStream" uid="uid://ccapaeipgo5h7" path="res://Assets/Audio/game_over.ogg" id="2_pnec5"]
[ext_resource type="AudioStream" uid="uid://dyd6ckbx4y274" path="res://Assets/Audio/BGM.mp3" id="3_vr7ba"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_dg77c"]
color = Color(0.5803922, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vr7ba"]
bg_color = Color(1, 0, 0.23529412, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0apqc"]
font_size = 50
shadow_color = Color(1, 0.84313726, 0, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_t410l"]
font_size = 22
outline_size = 2
outline_color = Color(1, 0.84313726, 0, 1)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k5de2")

[node name="SpeedLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 60.0
offset_bottom = 83.0
tooltip_text = "DATA FLOW: 10.0 MB/s"

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 50.0
theme_override_styles/background = SubResource("StyleBoxLine_dg77c")
theme_override_styles/fill = SubResource("StyleBoxFlat_vr7ba")
max_value = 3.0
step = 1.0
value = 3.0
show_percentage = false

[node name="GameOverPanel" type="Panel" parent="."]
process_mode = 2
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
text = "SYSTEM FAILURE"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="RestartButton" type="Button" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 20.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
text = "REBOOT SYSTEM"
metadata/_edit_use_anchors_ = true

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 10.0
offset_right = 20.0
offset_bottom = 33.0
grow_horizontal = 2
text = "SCORE: 0"
label_settings = SubResource("LabelSettings_0apqc")
horizontal_alignment = 1

[node name="DistanceLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 507.0
offset_top = 83.0
offset_right = 643.0
offset_bottom = 114.0
text = "DIST: 0000 m"
label_settings = SubResource("LabelSettings_t410l")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("2_pnec5")

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_vr7ba")
autoplay = true

[node name="PausePanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 72.0
offset_right = 74.0
offset_bottom = 112.0

[node name="ResumeButton" type="Button" parent="PausePanel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="QuitButton" type="Button" parent="PausePanel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
